renamed fishy.html to fix spelling error,added image in program and added title updated homepage and imported fishy.png

--- a/homepage.html
+++ b/homepage.html
@@ -1,50 +1,81 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
-    <link href="./homepage.png" rel='icon'>
-    <link href='./homepage.css' rel='stylesheet'>
+  <head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./homepage.png" rel="icon" />
+    <link href="./homepage.css" rel="stylesheet" />
     <title>Home</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <ul>
-        <a href="./table.html" target="_blank">Stat's website</a>
-        <a href="./Javascript.html" target="_blank">Learn Javascript</a>
-        <a href="./PrimeNumbers.html" target="_blank">Learn Factors</a>
-        <a href="./IfElse.html" target="_blank">Boy or Girl Quiz</a>
-        <a href="./overflow.html" target="_blank">Demo of overflow</a>
-
+      <a href="./table.html" target="_blank">Stat's website</a>
+      <a href="./Javascript.html" target="_blank">Learn Javascript</a>
+      <a href="./PrimeNumbers.html" target="_blank">Learn Factors</a>
+      <a href="./IfElse.html" target="_blank">Boy or Girl Quiz</a>
+      <a href="./overflow.html" target="_blank">Demo of overflow</a>
     </ul>
-    <h1 style="margin-top: 60px;">My website</h1>
-    <p style="font-style: italic;"> Updated: January 10, 2022</p>
-    <p>This website is the root of all the websites I made but there's more to this website. </p>
-    <p>This website has a journal, important dates to mark, other websites to visit and what's new in this website and
-        others.</p>
+    <h1 style="margin-top: 60px">My website</h1>
+    <p style="font-style: italic">Updated: January 18, 2022</p>
+    <p>
+      This website is the root of all the websites I made but there's more to
+      this website. I would also tell about other programs and things in this
+      website.
+    </p>
+    <p>
+      This website has a journal, important dates to mark, other websites to
+      visit and what's new in this website and others.
+    </p>
 
     <h2>What happened based on what I know:</h2>
     <div>
-        January 9th: Not much has happened from the 3rd except that we finished Avatar on the same day but later in night. School resumed and we did benchmark
-        testing and I got a 80 in math. There were some hard questions so it would be a bit higher. Science benchmark is going to come soon. Other than that
-        not much has happened in gardening or school. India won one test match and South Africa another.  
+      January 18th: Many things happened. After we finished Avatar, we watched
+      Lost in Space which is 1 hour per epidsode and Legends of Korra, sequel of
+      Avatar. Also day before yesterday we had an snow day! There were a few
+      inches of snow. First we planned what we would do in snow day and then we
+      played but only for a few minutes. Then we drank ginger tea and watched
+      some TV. We also had pongual yesterday. We had many things like Rice
+      pongual, Millet pongual, two different kinds of chutneys, sambar and
+      idlies. We also had bread day on Saturday. Lot of the potted plants we had
+      died since we put them outside. We are having the 4-day break from school.
+      Right now I have two B's in 2nd quarter which ended last friday. That ends
+      my streak of all A's since first quarter. I got those two B's because I
+      didn't do well on those assignments. In NFL, Cowboys lost (Adhi's favorite
+      team) and 49ers won (my fav team). Patriots and Raiders lost. And Bengals
+      won a playoff game since a very long time. Buccaneers and Cheifs won their
+      games but sadly Cardinals (Another fav) lost against Rams. Now the Wild
+      Card has been done with Division to go. Now Adhi's another favorite teams
+      is Titans which are playing Bengals. South Africa won third test match
+      winning the test series.
     </div>
-    <div>
-        
-    </div>
+    <div></div>
     <h2>January 2022 dates:</h2>
-    <div> January 11: Science benchmark</div>
-    <div> January 14th: End of 2nd quarter</div>
-    <div> Evening of January 14th: Start of 4 day weekend</div>
-    <div> January 15-17: Wild card weekend in NFL.</div>
-    <div> January 14th-18: Long weekend</div>
-    <div> January 17th: MLK holdiay</div>
-    <div> January 18th: End of long weekend</div>
-    <div> January 19th: Start of 3rd quarter/2nd semester</div>
-    
+    <div>January 19th: India vs South Africa 1st ODI</div>
+    <div>January 19th: Start of 3rd quarter/2nd semester</div>
+    <div>January 19th-21st: Might be virtual school day</div>
+    <div>January 20th: Anniversary of Biden's presidency</div>
+    <div>January 21st: Snow day</div>
+    <div>January 22nd - 23rd: Division round NFL</div>
+    <div>January 28th: AFC/NFC championships</div>
+
+    <h2>Febuary 2022 dates:</h2>
+    <div>Febuary 13th: Super Bowl</div>
+    <div>Febuary 14th: Valentines day</div>
+    <div>Febuary 19-21: Long weekend</div>
+    <div>Febuary 21st: No school</div>
+
     <h2>What's new in my websites and what I would do:</h2>
-    <div>Updated journal and calander.</div>
-
-</body>
-
+    <div>
+      Updated journal and calander. I also added Febuary calander. In The stats
+      website, I removed the new year banner. I plan to make small changes. In
+      the Learning Javascript website, I added some style but it needs more
+      style and I plan to add an Navbar. I also plan to add more things about
+      Javascript in the near future. I formatted the PrimeNumbers.html and
+      changed colors to be more user friendly. I plan to change color in the
+      random background color. I am currently doing fishy.html.
+    </div>
+  </body>
 </html>
