--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
     />
     <link href="./homepage.png" rel="icon" />
     <link href="./homepage.css" rel="stylesheet" />
-    <title>Home</title>
+    <title>My homepage</title>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
       <a href="./overflow.html" target="_blank">Demo of overflow</a>
     </ul>
     <h1 style="margin-top: 60px">My website</h1>
-    <p style="font-style: italic">Updated: January 18, 2022</p>
+    <p style="font-style: italic">Updated: January 19, 2022</p>
     <p>
       This website is the root of all the websites I made but there's more to
       this website. I would also tell about other programs and things in this
@@ -30,52 +30,37 @@
       visit and what's new in this website and others.
     </p>
 
-    <h2>What happened based on what I know:</h2>
+    <h2>My journal</h2>
     <div>
-      January 18th: Many things happened. After we finished Avatar, we watched
-      Lost in Space which is 1 hour per epidsode and Legends of Korra, sequel of
-      Avatar. Also day before yesterday we had an snow day! There were a few
-      inches of snow. First we planned what we would do in snow day and then we
-      played but only for a few minutes. Then we drank ginger tea and watched
-      some TV. We also had pongual yesterday. We had many things like Rice
-      pongual, Millet pongual, two different kinds of chutneys, sambar and
-      idlies. We also had bread day on Saturday. Lot of the potted plants we had
-      died since we put them outside. We are having the 4-day break from school.
-      Right now I have two B's in 2nd quarter which ended last friday. That ends
-      my streak of all A's since first quarter. I got those two B's because I
-      didn't do well on those assignments. In NFL, Cowboys lost (Adhi's favorite
-      team) and 49ers won (my fav team). Patriots and Raiders lost. And Bengals
-      won a playoff game since a very long time. Buccaneers and Cheifs won their
-      games but sadly Cardinals (Another fav) lost against Rams. Now the Wild
-      Card has been done with Division to go. Now Adhi's another favorite teams
-      is Titans which are playing Bengals. South Africa won third test match
-      winning the test series.
+      January 19th: Some more things happened. Today's not a school day because
+      of the snow that's still there. Not much in gardening but South Africa won
+      the first ODI against India. So that means school might start tomorrow or
+      not. Other than that there wasn't much.
     </div>
     <div></div>
-    <h2>January 2022 dates:</h2>
-    <div>January 19th: India vs South Africa 1st ODI</div>
-    <div>January 19th: Start of 3rd quarter/2nd semester</div>
-    <div>January 19th-21st: Might be virtual school day</div>
-    <div>January 20th: Anniversary of Biden's presidency</div>
-    <div>January 21st: Snow day</div>
-    <div>January 22nd - 23rd: Division round NFL</div>
-    <div>January 28th: AFC/NFC championships</div>
+    <h2>January 2022 dates</h2>
+    <div>January 20: Start of Quarter 3/Semester 2</div>
+    <div>January 20-21: Might be virtual school day</div>
+    <div>January 20: Anniversary of Biden's presidency</div>
+    <div>January 21: Snow day</div>
+    <div>January 21: India vs South Africa 2nd ODI</div>
+    <div>January 22 - 23: Division round NFL</div>
+    <div>January 23: India vs South Africa 3rd ODI</div>
+    <div>January 28-31: AFC/NFC championships</div>
 
-    <h2>Febuary 2022 dates:</h2>
-    <div>Febuary 13th: Super Bowl</div>
-    <div>Febuary 14th: Valentines day</div>
+    <h2>Febuary 2022 dates</h2>
+    <div>Febuary 13: Super Bowl</div>
+    <div>Febuary 14: Valentines day</div>
     <div>Febuary 19-21: Long weekend</div>
-    <div>Febuary 21st: No school</div>
+    <div>Febuary 21: No school</div>
+    <div>Febuary 21: Presidents day</div>
 
-    <h2>What's new in my websites and what I would do:</h2>
+    <h2>What's new in my programs</h2>
     <div>
-      Updated journal and calander. I also added Febuary calander. In The stats
-      website, I removed the new year banner. I plan to make small changes. In
-      the Learning Javascript website, I added some style but it needs more
-      style and I plan to add an Navbar. I also plan to add more things about
-      Javascript in the near future. I formatted the PrimeNumbers.html and
-      changed colors to be more user friendly. I plan to change color in the
-      random background color. I am currently doing fishy.html.
+      I'm starting my renovations. There's not much I can do but I changed the
+      styles and added a new calendar. I changed the title of this website. I
+      did some changes in the paragraphs. I plan to make an seperate website
+      where it shows what's new with my websites and the status they're in.
     </div>
   </body>
 </html>
