--- a/homepage.html
+++ b/homepage.html
@@ -19,7 +19,7 @@
       <a href="./overflow.html" target="_blank">Demo of overflow</a>
     </ul>
     <h1 style="margin-top: 60px">My website</h1>
-    <p style="font-style: italic">Updated: January 19, 2022</p>
+    <p style="font-style: italic">Updated: January 22, 2022</p>
     <p>
       This website is the root of all the websites I made but there's more to
       this website. I would also tell about other programs and things in this
@@ -39,12 +39,7 @@
     </div>
     <div></div>
     <h2>January 2022 dates</h2>
-    <div>January 20: Start of Quarter 3/Semester 2</div>
-    <div>January 20-21: Might be virtual school day</div>
-    <div>January 20: Anniversary of Biden's presidency</div>
-    <div>January 21: Snow day</div>
-    <div>January 21: India vs South Africa 2nd ODI</div>
-    <div>January 22 - 23: Division round NFL</div>
+    <div>January 23: Division round NFL</div>
     <div>January 23: India vs South Africa 3rd ODI</div>
     <div>January 28-31: AFC/NFC championships</div>
 
