multiple changes in fishy, homepage, added area, RN

--- a/fishy.html
+++ b/fishy.html
@@ -1,21 +1,39 @@
 <!doctype html>
 <html>
-    <title>Fishy in sea</title></ti>
+<title>Fishy in sea</title>
+</ti>
 <style>
     body {
-        background-color:#d2691e;
+        background-color: #d2691e;
     }
+
     * {
         text-align: center;
     }
+
     p {
         font-style: italic;
     }
+
+    #getBigger {
+        font-size: 30px;
+        font-style: normal;
+    }
 </style>
+
 <body>
-<h1>Fishy in sea image</h1>
-<p>Updated: 1/17/22</p>
-<h2>This is Adhisuryasara's pet - Fishy in the sea! Venkat family likes this!</h2>
-<img src="Fishy.png">
+    <h1>Fishy in sea image</h1>
+    <p>Website complete!</p>
+    <h2>This is Adhisuryasara's pet - Fishy in the sea! Venkat family likes this!</h2>
+    <img src="Fishy.png">
+    <h2>About images</h2>
+    <p id='getBigger'>The thing above is called an image, a visual graphic that tells many things like a picture. It can
+        have different
+        forms like PNG and JPEG To make an image in
+        HTML, you use the <img> tag and inside of it has
+        different attributes. The common ones in img are src which tells the source of the image. The source can be the
+        image file. The alt attribute tells the alternate text if the image gets broken. They are often linked or
+        embedded into webpages.</p>
 </body>
+
 </html>
