--- a/homepage.html
+++ b/homepage.html
@@ -39,9 +39,8 @@
     </div>
     <div></div>
     <h2>January 2022 dates</h2>
-    <div>January 23: Division round NFL</div>
-    <div>January 23: India vs South Africa 3rd ODI</div>
-    <div>January 28-31: AFC/NFC championships</div>
+    <div>January 25-26: I-Ready testing</div>
+    <div>January 30-31: AFC/NFC championships</div>
 
     <h2>Febuary 2022 dates</h2>
     <div>Febuary 13: Super Bowl</div>
