changed a bit in fishy, area and homepage

--- a/homepage.html
+++ b/homepage.html
@@ -32,20 +32,11 @@
 
     <h2>My journal</h2>
     <div>
-      January 19th: Some more things happened. Today's not a school day because
-      of the snow that's still there. Not much in gardening but South Africa won
-      the first ODI against India. So that means school might start tomorrow or
-      not. Other than that there wasn't much.
+      Febuary 19th: Plenty of stuff happened now that its exactly a month.
     </div>
     <div></div>
-    <h2>January 2022 dates</h2>
-    <div>January 25-26: I-Ready testing</div>
-    <div>January 30-31: AFC/NFC championships</div>
-
     <h2>Febuary 2022 dates</h2>
-    <div>Febuary 13: Super Bowl</div>
-    <div>Febuary 14: Valentines day</div>
-    <div>Febuary 19-21: Long weekend</div>
+    <div>Febuary 20-21: Long weekend</div>
     <div>Febuary 21: No school</div>
     <div>Febuary 21: Presidents day</div>
 
