updated homepage, made translate

--- a/homepage.html
+++ b/homepage.html
@@ -1,51 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link href="./homepage.png" rel="icon" />
-    <link href="./homepage.css" rel="stylesheet" />
-    <title>My homepage</title>
-  </head>
 
-  <body>
-    <ul>
-      <a href="./table.html" target="_blank">Stat's website</a>
-      <a href="./Javascript.html" target="_blank">Learn Javascript</a>
-      <a href="./PrimeNumbers.html" target="_blank">Learn Factors</a>
-      <a href="./IfElse.html" target="_blank">Boy or Girl Quiz</a>
-      <a href="./overflow.html" target="_blank">Demo of overflow</a>
-    </ul>
-    <h1 style="margin-top: 60px">My website</h1>
-    <p style="font-style: italic">Updated: January 22, 2022</p>
-    <p>
-      This website is the root of all the websites I made but there's more to
-      this website. I would also tell about other programs and things in this
-      website.
-    </p>
-    <p>
-      This website has a journal, important dates to mark, other websites to
-      visit and what's new in this website and others.
-    </p>
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet" />
+  <link href="./homepage.png" rel="icon" />
+  <link href="./homepage.css" rel="stylesheet" />
+  <title>My homepage</title>
+</head>
 
-    <h2>My journal</h2>
-    <div>
-      Febuary 19th: Plenty of stuff happened now that its exactly a month.
-    </div>
-    <div></div>
-    <h2>Febuary 2022 dates</h2>
-    <div>Febuary 20-21: Long weekend</div>
-    <div>Febuary 21: No school</div>
-    <div>Febuary 21: Presidents day</div>
+<body>
+  <ul>
+    <a href="./table.html" target="_blank">Stat's website</a>
+    <a href="./Javascript.html" target="_blank">Learn Javascript</a>
+    <a href="./PrimeNumbers.html" target="_blank">Learn Factors</a>
+    <a href="./IfElse.html" target="_blank">Boy or Girl Quiz</a>
+    <a href="./overflow.html" target="_blank">Demo of overflow</a>
+  </ul>
+  <h1 style="margin-top: 60px">My website</h1>
+  <p style="font-style: italic">Updated: March 18, 2022</p>
+  <p>
+    This website is the root of all the websites I made but there's more to
+    this website. I would also tell about other programs and things in this
+    website.
+  </p>
+  <p>
+    This website has a journal, important dates to mark, other websites to
+    visit and what's new in this website and others.
+  </p>
 
-    <h2>What's new in my programs</h2>
-    <div>
-      I'm starting my renovations. There's not much I can do but I changed the
-      styles and added a new calendar. I changed the title of this website. I
-      did some changes in the paragraphs. I plan to make an seperate website
-      where it shows what's new with my websites and the status they're in.
-    </div>
-  </body>
+  <h2>My journal</h2>
+  <div>
+    March 18th: Plenty of stuff happened now that its about 2 months. I don't think we had a snow day but I don't know
+    when. It's been so long. School has changed too. Our math teacher has left and now we're waiting for our new math
+    teacher to come.
+    Also wordle is getting popular and getting plenty of spinoffs. Many units have came and went. Unit 3 is now ending.
+    It's getting close to the end of the year. I am finishing up my school work great. We had EOG's yesterday and the
+    day before but I didn't do good (78 and
+    76). March madness came which is the next thing. There wasn't much except that a team that hasn't won a march
+    madness match, beat a number 2 seeded team (2nd top team). Not too much in gardening except that a tree was leaning
+    heavily.
+    That came after strong winds came and made power outages. Also speaking of power outages, Tesla came and fixed the
+    wire and now we're making 30-40 kilowatts. Now Tesla works done after 4 months. Also since Fresh costs keep rising
+    and everything gets out of stock, we decided to cancel Fresh and go to Aldi and Walmart. Since we didn't need Fresh,
+    we canceled Amazon Prime. That means we can't watch Prime anymore. Also adding to that, daddy canceled Disney and
+    Netflix since they were taking up a lot of money. Hulu and HBO max were gone. This meant that the only thing to
+    watch was Youtube.
+    Fortunately daddy found movies to watch there and we can watch anything there.
+  </div>
+  <div></div>
+  <h2>March 2022 dates</h2>
+  <div>March 22: Science EOG</div>
+  <div>March 19-20: March madness round 2</div>
+  <div>March 26-28: Long weekend</div>
+  <div>March 28: No school-teacher workday</div>
+
+
+  <h2>What's new in my programs</h2>
+  <div>
+    Updated calander and journal.
+  </div>
+</body>
+
 </html>
