--- a/IfElse.html
+++ b/IfElse.html
@@ -45,7 +45,7 @@
     <label>Boy</label> <input type="radio" name="gender" id="b" value="boy" /><br>
     <label>Girl</label> <input type="radio" name="gender" id="g" value="girl" /><br>
     <label>Other</label> <input type="radio" name="gender" id="none" value="girl" /><br>
-    <input type="button" value="Find out Boy or Girl or other" onclick="BoyOrGirl()" />
+    <input type="button" value="Find out if you're a Boy, Girl or Other gender" onclick="BoyOrGirl()" />
     <div>
         <h3 id="selection"></h3>
     </div>
