--- a/Javascript.html
+++ b/Javascript.html
@@ -4,15 +4,14 @@
 <head>
   <title>Learn Javascript</title>
   <h1 class="TopHeaders">Javascript</h1>
-  <p class="italic TopHeaders"> Updated: January 15, 2022</p>
+  <p class="italic TopHeaders"> Updated: March 20, 2022</p>
   <h2 class="TopHeaders">This site teaches about the basics of Javascript making it helpful for a refresher or helps
-    beginners understand
-    about Javascript.</p>
-    <p>This course is for people who have basic knowledge of HTML and CSS and is new to Javascript but is helpful for people of all skills.</p>
+    beginners understand about Javascript.</p>
+    <p>This course is for people who have basic knowledge of HTML and CSS and is new to Javascript but is helpful for
+      people of all skills.</p>
     <h2 class="TopHeaders">Javascript</h2>
     <p class="TopHeaders">Javascript is a scripting language that is easy to use that can create websites and is the
-      only coding language
-      web browsers understand. It also makes websites dynamic and more user-interactive.</p>
+      only coding language web browsers understand. It also makes websites dynamic and more user-interactive.</p>
     <h3 class="TopHeaders">How to add it in your program</h3>
     <p class="TopHeaders">To add it in your program, make an script tag in your html file and add Javascript code in it.
       Another way is to make an seperate Javascript file and link it to your script tag in your html file by using the
@@ -21,6 +20,7 @@
       body {
         background-color: #3eda5b;
       }
+
       .Button {
         background-color: #008000;
         border: none;
