removed translate logo and added new picture and table fillers are replaced with something more smaller

--- a/table.html
+++ b/table.html
@@ -217,25 +217,25 @@
     <span>
         <li class='bold'>North America</li>
         <li>USA</li>
-        <li>Capital- Washington DC</li>
         <li>Canada</li>
-        <li>Capital- Ottawa</li>
         <li>Mexico</li>
-        <li>Capital- Mexico City</li>
         <li>Greenland</li>
-        <li>Territory of Denmark</li>
-        <li>Solution to solve list problem.</li>
-        <li>Solution to solve list problem.</li>
-        <li>Solution to solve list problem.</li>
-        <li>Solution to solve list problem.</li>
-        <li>Solution to solve list problem.</li>
-        <li>Solution to solve list problem.</li>
-        <li>Solution to solve list problem.</li>
-        <li>Solution to solve list problem.</li>
-        <li>Solution to solve list problem.</li>
-        <li>Solution to solve list problem.</li>
-        <li>Solution to solve list problem.</li>
-        <li class='bottomthings'>Spacefiller</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li class='bottomthings'>`</li>
     </span>
     <span>
         <li class='bold'>Central Amercia</li>
@@ -246,19 +246,19 @@
         <li>Honduras</li>
         <li>Nicaragua</li>
         <li>Belize</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li class='bottomthings'>Spacefiller</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li class='bottomthings'>`</li>
     </span>
     <span>
         <li class='bold'>Caribbean </li>
@@ -290,21 +290,21 @@
         <li>Bermuda</li>
         <li>Turks and Caicos Islands</li>
         <li>Saint Pierre and Miquelon</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li class='bottomthings'>Spacefiller</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li>`</li>
+        <li class='bottomthings'>`</li>
     </span>
 </body>
 
