--- a/homepage.html
+++ b/homepage.html
@@ -29,31 +29,26 @@
   </p>
 
   <h2>My journal</h2>
-  <div>
-    March 18th: Plenty of stuff happened now that its about 2 months. I don't think we had a snow day but I don't know
-    when. It's been so long. School has changed too. Our math teacher has left and now we're waiting for our new math
-    teacher to come.
-    Also wordle is getting popular and getting plenty of spinoffs. Many units have came and went. Unit 3 is now ending.
-    It's getting close to the end of the year. I am finishing up my school work great. We had EOG's yesterday and the
-    day before but I didn't do good (78 and
-    76). March madness came which is the next thing. There wasn't much except that a team that hasn't won a march
-    madness match, beat a number 2 seeded team (2nd top team). Not too much in gardening except that a tree was leaning
-    heavily.
-    That came after strong winds came and made power outages. Also speaking of power outages, Tesla came and fixed the
-    wire and now we're making 30-40 kilowatts. Now Tesla works done after 4 months. Also since Fresh costs keep rising
-    and everything gets out of stock, we decided to cancel Fresh and go to Aldi and Walmart. Since we didn't need Fresh,
-    we canceled Amazon Prime. That means we can't watch Prime anymore. Also adding to that, daddy canceled Disney and
-    Netflix since they were taking up a lot of money. Hulu and HBO max were gone. This meant that the only thing to
-    watch was Youtube.
-    Fortunately daddy found movies to watch there and we can watch anything there.
+  <div> 
+    June 30: Way more things these past days. First it's almost 3 months away from the last post. Plenty of things have happened
+    since then. One thing is that school ended long ago. The units flew by and ended with the EOG's and one of the EOG's (the Math one)
+    was 4 hours long. I did get a 5 for Math and Science but was only one point away to getting a 5 in ALPS. Second, spring break came 
+    and we went to the smokies. The only difference was that the hotel, The Central Hotel, was more luxurious and cleaner, and we went
+    more attractions, most on the 4th day (being lazy other days). We brought in bread and PB plus more on the trip (we're still eating
+     PB which is peanut butter). We didn't do much other than preparing and resting. During the trip we found a new TV show, Agents of 
+     Shield and are currently watching it. And this Agents of Shield is in Disney Plus which brings next good news. Daddy brought back 
+     Disney Plus, Hulu, HBO max and had new things like Vudu and freevee which we couldn't watch because they weren't too good or they 
+     weren't free. Tesla has been being normal but sometimes making 50-60 kilowatts a day and we crushed monthly and yearly records. We 
+     got our new math teacher and had field day which was fun. March Madness was finished with 1 seeded Jayhawks winning against NC state.
+     Speaking of the bracket, we did a stock market challenge but it was held at a bad time because most people couldn't gain profits.
+     During the summer, we went to many shopping places like the Carolina Mall, Carowinds (fun theme park that is similar to wild adventures)
+     and Dave's and Busters. There's lot more during these three months but I think these are important.
   </div>
   <div></div>
-  <h2>March 2022 dates</h2>
-  <div>March 22: Science EOG</div>
-  <div>March 19-20: March madness round 2</div>
-  <div>March 26-28: Long weekend</div>
-  <div>March 28: No school-teacher workday</div>
-
+  <h2>July 2022 dates</h2>
+  <div>July 1-4th: Long weekend</div>
+  <div>July 4th: Independence day</div>
+  <div>July 4th-15th: May go to Carowind's</div>
 
   <h2>What's new in my programs</h2>
   <div>
