shortened intro, cleanup

--- a/homepage.html
+++ b/homepage.html
@@ -17,15 +17,11 @@
     <a href="./overflow.html" target="_blank">Demo of overflow</a>
   </ul>
   <h1 style="margin-top: 60px">My website</h1>
-  <p style="font-style: italic">Updated: March 18, 2022</p>
+  <p style="font-style: italic">Updated: June 30, 2022</p>
+
   <p>
-    This website is the root of all the websites I made but there's more to
-    this website. I would also tell about other programs and things in this
-    website.
-  </p>
-  <p>
-    This website has a journal, important dates to mark, other websites to
-    visit and what's new in this website and others.
+    This website connects other websites and it has as a journal, important dates to mark, other websites to
+    visit and updates.
   </p>
 
   <h2>My journal</h2>
@@ -44,7 +40,6 @@
      During the summer, we went to many shopping places like the Carolina Mall, Carowinds (fun theme park that is similar to wild adventures)
      and Dave's and Busters. There's lot more during these three months but I think these are important.
   </div>
-  <div></div>
   <h2>July 2022 dates</h2>
   <div>July 1-4th: Long weekend</div>
   <div>July 4th: Independence day</div>
