made jobRater upda

--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
     <a href="./overflow.html" target="_blank">Demo of overflow</a>
   </ul>
   <h1 style="margin-top: 60px">My website</h1>
-  <p style="font-style: italic">Updated: June 30, 2022</p>
+  <p style="font-style: italic">Updated: July 19, 2022</p>
 
   <p>
     This website connects other websites and it has as a journal, important dates to mark, other websites to
@@ -25,25 +25,16 @@
   </p>
 
   <h2>My journal</h2>
-  <div> 
-    June 30: Way more things these past days. First it's almost 3 months away from the last post. Plenty of things have happened
-    since then. One thing is that school ended long ago. The units flew by and ended with the EOG's and one of the EOG's (the Math one)
-    was 4 hours long. I did get a 5 for Math and Science but was only one point away to getting a 5 in ALPS. Second, spring break came 
-    and we went to the smokies. The only difference was that the hotel, The Central Hotel, was more luxurious and cleaner, and we went
-    more attractions, most on the 4th day (being lazy other days). We brought in bread and PB plus more on the trip (we're still eating
-     PB which is peanut butter). We didn't do much other than preparing and resting. During the trip we found a new TV show, Agents of 
-     Shield and are currently watching it. And this Agents of Shield is in Disney Plus which brings next good news. Daddy brought back 
-     Disney Plus, Hulu, HBO max and had new things like Vudu and freevee which we couldn't watch because they weren't too good or they 
-     weren't free. Tesla has been being normal but sometimes making 50-60 kilowatts a day and we crushed monthly and yearly records. We 
-     got our new math teacher and had field day which was fun. March Madness was finished with 1 seeded Jayhawks winning against NC state.
-     Speaking of the bracket, we did a stock market challenge but it was held at a bad time because most people couldn't gain profits.
-     During the summer, we went to many shopping places like the Carolina Mall, Carowinds (fun theme park that is similar to wild adventures)
-     and Dave's and Busters. There's lot more during these three months but I think these are important.
+  <div>
+    July 19: Not too much 2 days later. We watched more TV but didn't have computer until today. We also went to Azure
+    when they finished unloading. I also saw how the neighborhood Walmart grocery was like and it was like Earthfare.
+    We did lots of programming, making coding projects. We walked a lot and even went to Addison Park which was in its
+    later stages. In gardening we were flipping the stones and we did lots of progress. We only have one tree well left.
   </div>
   <h2>July 2022 dates</h2>
-  <div>July 1-4th: Long weekend</div>
-  <div>July 4th: Independence day</div>
-  <div>July 4th-15th: May go to Carowind's</div>
+  <div>July 27th: Daddy's birthday</div>
+  <div>July 31st: House is 4 years old </div>
+  <div>July 31st: Suitcases arrive</div>
 
   <h2>What's new in my programs</h2>
   <div>
